compiler/testdata/errors/forward_jump_over_local_assign.lua
goto L

local name = "hello"

::L::

print(name)
